--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull serenityblood/infra_actions
+          sudo docker pull ${{ secrets.DOCKERHUB_NAME }}/infra_actions
           #остановка всех контейнеров
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 serenityblood/infra_actions
+          sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKERHUB_NAME }}/infra_actions
