--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_NAME }}
           password: ${{ secrets.DOCKERHUB_PASS }}
       - name: Push to Docker Hub
-        # Пуш образа в Docker Hub  2
+        # Пуш образа в Docker Hub 
         uses: docker/build-push-action@v2 
         with:
           push: true
