--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,5 +79,5 @@ jobs:
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
+        token: ${{ secrets.TELEGRAM_KEY }}
         message: ${{ github.workflow }} успешно выполнен!
